static/css/style.css
body {
  background-color: lightgray;
}

/*Background video
#background-video {
    position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
    z-index: -1;
    overflow: hidden;
  }
*/

li.nav-item{
   list-style: none;
}

a.nav-link {
  text-decoration: none !important;
  color: rgba(255,255,255,.55);
}
a.nav-link:hover {
  color: aqua;
}

#background-video {
  right: 0;
  bottom: 0;
  width: 100vw;
  height: 100vh;
  position: fixed;
  object-fit: cover;
  z-index: -1;
  overflow: hidden;
}
#slogan {
  margin-top: 70vh;
  color: rgb(233, 230, 230);
}

div.card-img-overlay {
  pointer-events: none;  
  }

.navbar {
    border-bottom: #008ed6 2px solid;
}

.action_field {
  padding-left: 20vw;
  padding-right: 20vw;
}

footer {
  bottom:0;
  width: 100vw;
}

.card-img-top {
  width: 100;
  height: 30vh;
  object-fit: cover;
}

.fa-brands
{ 
  color: rgba(255,255,255,.55) !important;
}

